fixed visual inconsistency of the array bars gaps

--- a/src/components/ArrayBars/ArrayBars.module.css
+++ b/src/components/ArrayBars/ArrayBars.module.css
@@ -1,5 +1,4 @@
 .array {
-    transform: scale(1.2);
     transform-origin: bottom;
     width: auto;
     margin: 0 13vw;
